--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Firstname L. | Showcase Kiosk</title>
+    <title>Gabriel P. | Team Tourism Website</title>
 
     <style>
 
@@ -38,7 +38,7 @@
         }
 
         main {
-            background-image: url(img/hero.jpg) ;
+            background-image: url(img/Capture.PNG) ;
             background-size: cover;
             height: 100vh;
             width: 100vw;
@@ -56,7 +56,7 @@
     <section class="wrapper">
         <main>
             <article>
-                <img src="img/qr.png" alt="QR Code">
+                <img src="img/Capture2.PNG" alt="QR Code">
                 <span>Scan to Visit</span>
                 <h1>Firstname L.'s Website</h1>
             </article>
